# kuriyama

./: README.md  pyproject.toml
kuriyama/: entry.py
kuriyama/console/: __init__.py  render.py
