[tool.poetry]
name = "kuriyama"
version = "0.1.0"
description = ""
authors = ["Hanaasagi <ambiguous404@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
inquirer = "^2.6"
readchar = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kuriyama = 'kuriyama.entry:main'
